# mRNABERT

./: README.md  ROADMAP.md  classification.py  main.py  regression.py  requirements.txt  run_mlm.py  run_train.sh
design-flow/: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  vaxflow
design-flow/docs/: audit-automation-and-llm-governance.md  research-loop-pilot-plan.md  round-based-design-optimization.md  stage2-candidate-specification.md  stage3-protein-structure-assessment.md  stage4-7-computational-pipeline.md  stage4-toolchain.md  stage5-toolchain.md  stage6-candidate-routing.md  stage6-codon-usage.md  stage6-evo2-adapter.md  supplied-data-audit.md  three-protein-mock-project-policy.md  three-protein-stage-1-open-decisions.md  workflow-v1.json  workflow-v1.md  workflow-v2.json  workflow-v2.md
design-flow/scripts/: build_bos_taurus_codon_usage.sh  build_program_showcase.py  import_stage6_evo2_results.sh  install_stage4_cpu_tools.sh  install_stage5_sequence_models.sh  plot_stage_closed_loop.py  prepare_stage6_evo2_job.sh  run_stage4_5_full.sh  run_stage4_mhc_smoke.sh  run_stage5_sequence_models.sh  run_stage6_evo2_gpu_nas.sh  run_stage6_mrna_cds_mock.sh  run_stage6_routed.sh  stage5_metapredict_worker.py  stage6_evo2_worker.py  verify_stage4_cpu_tools.sh  verify_stage5_sequence_models.sh
design-flow/src/design_flow/: __init__.py  (+46 more)
design-flow/tests/: test_build_program_showcase.py  test_codon_usage.py  test_evo2_adapter.py  test_exploratory_research_skill.py  test_flow.py  test_netmhc_adapter.py  test_plot_stage_closed_loop.py  test_stage5_model_adapter.py
(+94 files in other folders)
