[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vaccine-design-flow"
version = "0.11.0"
description = "Traceable design-build-test-learn workflow for vaccine constructs"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
vaxflow = "design_flow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
